--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+.prettycounter {
+  justify-content: center;
+  margin: 5%;
+}
+
+.counterlabel {
+  margin-right: 5px;
+  font-size: 25px;
+}
+
+.counterbutn {
+  width: 50px;
+  height: 50px;
+  font-size: 36px;
+  background-color: #4a59b9;
+  color: white;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.counterbutn:hover {
+  background-color: #0dcfcc;
+}
+
+.countervalue {
+  width: 50px;
+  display: inline-block;
+  text-align: center;
+  font-size: 25px;
+}
